# hippo7

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  makefile  pyproject.toml
assets/imagenet_classes/: dic_idx_to_label.json  hyponym_imagenet.json  imagenet1000_clsidx_to_labels.txt  read_classes.py  trie_char_to_name_to_idx.json
assets/meshes/: empty_cone.ply  hexahedron.ply  low_duck.ply  octahedron.ply  quad.ply
docker/: Dockerfile
docs/: conf.py  mkdocs.yml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_images/: graphviz-2172195c270e8f1156eef1145d1ac2d5a9b88db8.png.map  (+1 more)
docs/docs/: glossary.md  index.md
docs/docs/usage/: installation.rst  simple_graph.dot
src/: backend_server.py  frontend_app.py  graphviz_graph.gv  render_server.py
src/hippo7_app/hippo7_backend/: __init__.py  graph_setup.py  server.py
src/hippo7_app/hippo7_frontend/: __init__.py  backend_interface.py  graph_manager.py  hippo7.ini  hippo7.kv  nodepage.py  ui_kivy.py  util.py
src/renderer/: __init__.py  graph_setup.py  server.py
src/renderer/opengl/: geometry.py  render.py  shaders.py
src/renderer/pipeline/: __init__.py  graph.py  json.py  nodes.py  nodes_util.py  types.py
src/ui/: __init__.py  graph_manager.py  hippo7.kv  nodepage.py  ui_kivy.py
src/ui/widgets/: __init__.py  bpm_widget.py  class_selection.py  custom_widgets.kv
tests/: conftest.py  test_serialize.py
(+50 files in other folders)
