[tool.poetry]
name = "hippo7"
version = "0.1.0"
description = "Why is this called hippo7? I don't know, but hippos are cool."
authors = ["Bene Wiberg <benedikt@luminovo.ai>, Paul Kehnel <paul@luminovo.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.3"
numpy = "^1.17"
pytorch-pretrained-biggan = "^0.1.1"
scipy = "^1.3"
torchvision = "^0.4.2"
matplotlib = "^3.1"
librosa = "^0.7.1"
pytest = "^5.3"
pyopengl = "^3.1"
pyglet = "^1.4"
sounddevice = "^0.3.14"
kivy = "^1.11"
pygame = "^1.9"
plyfile = "^0.7.1"
numexpr = "^2.7.1"
pydantic = "^1.4"
pygtrie = "^2.3.2"
graphviz = "^0.13.2"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
glumpy = "^1.1.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
